End of Section 11

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,12 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Data source=test.db"
+    "DefaultConnection1" : "Data source=test.db",
+    "DefaultConnection" : "Data source=.\\sqlexpress; initial catalog=test.db; integrated security=true;"
   },
   "ApiUrl": "https://localhost:5001/"
 }
