--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-toastr": "^14.3.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
