--- a/client/package.json
+++ b/client/package.json
@@ -20,13 +20,16 @@
     "@angular/router": "^14.2.1",
     "ajv": "^6.9.1",
     "bootstrap": "^4.6.0",
+    "bootswatch": "^5.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^14.3.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "xng-breadcrumb": "^8.0.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
