End of Section 13

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection1" : "Data source=test.db",
-    "DefaultConnection" : "Data source=.\\sqlexpress; initial catalog=test.db; integrated security=true;"
+    "DefaultConnection" : "Data source=.\\sqlexpress; initial catalog=test.db; integrated security=true;",
+    "Redis" : "localhost"
   },
   "ApiUrl": "https://localhost:5001/"
 }
